# Polyglot-Project

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: codeql.yml
backend-actix/: Cargo.toml  Dockerfile
backend-actix/src/: main.rs  models.rs  repository.rs
backend-elysia/: .gitignore  Dockerfile  package.json
backend-elysia/prisma/: schema.prisma
backend-elysia/src/: index.ts
backend-elysia/src/repository/: product.repository.ts
backend-fastapi/: .gitignore  Dockerfile  database.py  main.py  models.py  requirements.txt
backend-fiber/: .gitignore  Dockerfile  go.mod  go.sum  main.go
backend-fiber/database/: database.go
backend-fiber/models/: products.go
backend-fiber/repository/: product_repository.go
database/: init.sql
frontend-nextjs/: Dockerfile  next.config.ts  package.json
frontend-nextjs/app/: page.tsx
