[package]
name = "backend-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 🚨 ติดตั้ง SQLx พร้อมระบุ Driver PostgreSQL และ Data Types ที่ต้องใช้
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }